--- a/src/Board.css
+++ b/src/Board.css
@@ -16,6 +16,13 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+.highScoreText {
+    font-size: 15px;
+    color: rgb(117, 117, 117);
+    margin-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .row {
     margin-top: 30px;
     width: 400px;
@@ -80,6 +87,10 @@
     .scoreText {
         font-size: 20px;
         margin-top:20px;
+    }
+    .highScoreText {
+        font-size: 15px;
+        margin-top: 20px;
     }
     .row {
         width:300px;
